--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.0",
     "config": "^3.3.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "mongoose": "^6.3.1",
     "nodemon": "^2.0.15"
