--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,12 @@
     "moment": "^2.27.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
     "react-file-base64": "^1.0.3",
     "react-redux": "^7.1.3",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "5.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
-  
   },
   "scripts": {
     "start": "react-scripts start",
