--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.19.2",
     "jwt-decode": "^3.1.2",
-    "material-ui-chip-input": "^1.1.0",
+    "material-ui-chip-input": "^2.0.0-beta.2",
     "moment": "^2.27.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
